[package]
name = "slack-tail"
version = "0.1.0"
authors = ["malcolm <malcolmbalch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "src/generated_code/" }
hyper = "0.13.8"
serde_json = "1.0"
futures = "0.3.5"
tokio = {version="0.2.22", features=["sync", "time", "macros", "rt-threaded"]}
hyper-tls = "0.4.3"
reqwest = "0.10.8"
